Fix z-index of preloader bar

--- a/css/global.css
+++ b/css/global.css
@@ -397,7 +397,7 @@ p:not([class]) {
   position: fixed;
   width: 100vw;
   height: 100vh;
-  z-index: 10;
+  z-index: 99999;
   display: flex;
   pointer-events: none; /* Disable pointer events on the overlay */
 }
